--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -235,8 +235,7 @@
   
 
   
-  
-<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <style>
     /* 현재 진행중인 시합 기본 테이블 스타일 */
@@ -255,10 +254,11 @@
       background: #ffffff;
       border: 2px solid #0c2340;
       border-radius: 20px;
-      padding: 5px;
+      padding: 0;
       box-shadow: 0 15px 45px rgba(12, 35, 64, 0.12);
       margin-bottom: 50px;
       position: relative;
+      overflow: hidden;
     }
 
     /* 모바일 대응 */
@@ -291,106 +291,102 @@
     }
   </style>
 
-<div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin: 0 15px 40px; text-align: center;">
+  <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
     <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       On-going Tournament
     </h1>
-</div>
+  </div>
 
-<div style="padding: 0 15px;">
   <div class="live-event-card">
-      <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
-        <div style="display: flex; align-items: center; gap: 12px;">
-          <span style="background: #94a3b8; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
-            <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-            RESCHEDULED
-          </span>
-          <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
-        </div>
-        <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 28, 2026</div>
+    <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
+      <div style="display: flex; align-items: center; gap: 12px;">
+        <span style="background: #94a3b8; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center; gap: 6px;">
+          <span style="width: 8px; height: 8px; background: white; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+          RESCHEDULED
+        </span>
+        <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
       </div>
-
-  <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #806600; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
-    <div style="flex-shrink: 0; margin-top: 2px;">
-      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-        <circle cx="12" cy="12" r="10"></circle>
-        <line x1="12" y1="8" x2="12" y2="12"></line>
-        <line x1="12" y1="16" x2="12.01" y2="16"></line>
-      </svg>
+      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 28, 2026</div>
     </div>
-    <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
-      NOTICE: Round 3 is confirmed for Jan 28 at The Oaks Course.
-    </p>
-  </div>
 
-      <div style="border-radius: 0 0 15px 15px; overflow: hidden; border-top: 1px solid #edf2f7;">
-        <table class="log-table">
-          <thead>
-            <tr>
-              <th class="col-info col-left">Tournament Details</th>
-              <th class="col-score">Score</th>
-              <th class="col-par">Par</th>
-              <th class="col-status">Status</th>
-              <th class="col-finish">Finish</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr style="background: rgba(231, 76, 60, 0.02);">
-              <td class="col-left">
-                <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
-                <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
-                <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
-                <div class="mobile-status-bar">
-                  <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
-                  <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
-                  <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
-                  <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
-                </div>
-              </td>
-              <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">68</span></td>
-              <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-4</span></td>
-              <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
-              <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">T1</td>
-            </tr>
-            <tr>
-              <td class="col-left">
-                <div style="font-weight: 600; font-size: 13px;">Jan 23, 2026</div>
-                <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
-                <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
-                <div class="mobile-status-bar">
-                  <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">69</span></div>
-                  <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-3</span></div>
-                  <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
-                  <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">2</span></div>
-                </div>
-              </td>
-              <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">69</span></td>
-              <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-3</span></td>
-              <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
-              <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">2</td>
-            </tr>
-            <tr style="background: rgba(34, 197, 94, 0.03);">
-              <td class="col-left">
-                <div style="font-weight: 600; font-size: 13px; color: #22c55e;">Jan 28, 2026</div>
-                <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Oaks Course (Par 72)</div>
-                <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
-                <div class="mobile-status-bar">
-                  <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#22c55e;">Scheduled</span></div>
-                </div>
-              </td>
-              <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-              <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-              <td class="hide-mobile" style="font-weight: 700; color: #22c55e;">Scheduled</td>
-              <td class="hide-mobile" style="color: #bdc3c7;">-</td>
-            </tr>
-          </tbody>
-        </table>
+    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #806600; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
+      <div style="flex-shrink: 0; margin-top: 2px;">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10"></circle>
+          <line x1="12" y1="8" x2="12" y2="12"></line>
+          <line x1="12" y1="16" x2="12.01" y2="16"></line>
+        </svg>
       </div>
-  </div>
-</div>
-</div>
+      <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
+        NOTICE: Round 3 is confirmed for Jan 28 at The Oaks Course.
+      </p>
+    </div>
 
-    <div style="background: #0c2340; padding: 15px 25px; border-radius: 0 0 18px 18px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 15px;">
+    <div style="overflow: hidden; border-top: 1px solid #edf2f7;">
+      <table class="log-table">
+        <thead>
+          <tr>
+            <th class="col-info col-left">Tournament Details</th>
+            <th class="col-score">Score</th>
+            <th class="col-par">Par</th>
+            <th class="col-status">Status</th>
+            <th class="col-finish">Finish</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr style="background: rgba(231, 76, 60, 0.02);">
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px; color: #e74c3c;">Jan 22, 2026</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
+              </div>
+            </td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">68</span></td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-4</span></td>
+            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">T1</td>
+          </tr>
+          <tr>
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px;">Jan 23, 2026</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
+              <div class="mobile-status-bar">
+                <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">69</span></div>
+                <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-3</span></div>
+                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
+                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">2</span></div>
+              </div>
+            </td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">69</span></td>
+            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-3</span></td>
+            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">2</td>
+          </tr>
+          <tr style="background: rgba(34, 197, 94, 0.03);">
+            <td class="col-left">
+              <div style="font-weight: 600; font-size: 13px; color: #22c55e;">Jan 28, 2026</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Oaks Course (Par 72)</div>
+              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
+              <div class="mobile-status-bar">
+                <div class="ms-item" style="border:none;"><span class="ms-label">STATUS</span><span class="ms-value" style="color:#22c55e;">Scheduled</span></div>
+              </div>
+            </td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+            <td class="hide-mobile" style="font-weight: 700; color: #22c55e;">Scheduled</td>
+            <td class="hide-mobile" style="color: #bdc3c7;">-</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 15px;">
       <div style="color: rgba(255,255,255,0.7); font-size: 12px; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Current Stats</div>
       <div style="display: flex; gap: 25px; align-items: center;">
         <div style="text-align: right; padding-right: 20px; border-right: 1px solid rgba(255,255,255,0.1);">
@@ -407,8 +403,8 @@
         </div>
       </div>
     </div>
+  </div>
 </div>
-
   
 
 
