--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -408,7 +408,7 @@
   </div>
 </div>
 
-<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
