--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -235,23 +235,18 @@
   
 
   
-
-  <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <style>
-    /* 현재 진행중인 시합 기본 테이블 스타일 */
     .log-table { width: 100%; border-collapse: collapse; background: white; table-layout: fixed; margin-bottom: 0; border: none; }
-    .log-table th { background: #f8f9fa; font-size: 12px; color: #0c2340; text-transform: uppercase; padding: 15px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
+    .log-table th { background: #f8f9fa; font-size: 11px; color: #0c2340; text-transform: uppercase; padding: 12px 10px; border-bottom: 2px solid #0c2340; text-align: center; }
     .log-table th.col-left { text-align: left; padding-left: 20px; }
     .log-table td { padding: 15px 10px; border-bottom: 1px solid #edf2f7; vertical-align: middle; text-align: center; }
     .log-table td.col-left { text-align: left; padding-left: 20px; }
     
     .under-par { color: #e74c3c !important; font-weight: 800 !important; }
     .over-par { color: #2c3e50 !important; font-weight: 700 !important; }
-    .scheduled-text { font-size: 11px; color: #95a5a6; font-weight: 600; }
-    .today-text { font-size: 12px; font-weight: 800; color: #e74c3c; }
 
-    /* In Progress 카드 스타일 */
     .live-event-card {
       background: #ffffff;
       border: 2px solid #0c2340;
@@ -265,18 +260,17 @@
       flex-direction: column;
     }
 
-    /* 모바일 대응 */
     @media (max-width: 768px) {
       .log-table thead { display: none; }
       .log-table, .log-table tbody, .log-table tr, .log-table td { display: block; width: 100%; box-sizing: border-box; }
       .log-table tr { margin-bottom: 15px; border: 1px solid #eee !important; border-radius: 12px; padding: 12px; }
       .log-table td { border: none !important; padding: 0 !important; text-align: left !important; }
       .hide-mobile { display: none !important; }
-      .mobile-status-bar { display: flex !important; background: #fcfcfc; border-radius: 8px; margin-top: 12px; padding: 10px 5px; border: 1px dashed #e2e8f0; }
+      .mobile-status-bar { display: flex !important; background: #fcfcfc; border-radius: 8px; margin-top: 10px; padding: 8px 5px; border: 1px dashed #e2e8f0; }
       .ms-item { flex: 1; text-align: center; border-right: 1px solid #eee; }
       .ms-item:last-child { border-right: none; }
-      .ms-label { display: block; font-size: 9px; color: #aaa; font-weight: 800; margin-bottom: 2px; }
-      .ms-value { display: block; font-size: 13px; font-weight: 800; }
+      .ms-label { display: block; font-size: 8px; color: #aaa; font-weight: 800; margin-bottom: 2px; }
+      .ms-value { display: block; font-size: 12px; font-weight: 800; }
     }
     
     @media (min-width: 769px) {
@@ -287,111 +281,102 @@
       .col-status { width: 15%; }
       .col-finish { width: 10%; }
     }
-
-    @keyframes pulse {
-      0% { opacity: 1; transform: scale(1); }
-      50% { opacity: 0.2; transform: scale(0.8); }
-      100% { opacity: 1; transform: scale(1); }
-    }
   </style>
 
   <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center;">
-    <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
+    <h1 style="margin: 0; color: #0c2340; font-size: 24px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
       Tournament Results
     </h1>
   </div>
 
   <div class="live-event-card">
-    <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px;">
+    <div style="padding: 20px 25px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 10px; background: #f8fafc;">
       <div style="display: flex; align-items: center; gap: 12px;">
-        <span style="background: #0c2340; color: white; padding: 4px 14px; border-radius: 50px; font-size: 10px; font-weight: 900; letter-spacing: 1px; display: flex; align-items: center;">
-          QUALIFIED (RANK 1)
-        </span>
-        <h2 style="color: #0c2340; margin: 0; font-size: 22px; font-weight: 800;">Compadres Collegiate (UTRGV) Qualifying</h2>
+        <span style="background: #0c2340; color: white; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 900; letter-spacing: 1px;">FINAL WINNER</span>
+        <h2 style="color: #0c2340; margin: 0; font-size: 19px; font-weight: 800;">Compadres Collegiate Qualifying</h2>
       </div>
-      <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 28, 2026</div>
+      <div style="font-size: 11px; color: #95a5a6; font-weight: 600;">Updated: Jan 28, 2026</div>
     </div>
 
-    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #0c2340; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
-      <div style="flex-shrink: 0; margin-top: 2px;">
-        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
-          <polyline points="22 4 12 14.01 9 11.01"></polyline>
-        </svg>
-      </div>
-      <p style="margin: 0; font-size: 13px; color: #0c2340; font-weight: 700; line-height: 1.5;">
-        FINAL STATUS: Total 213 (-3). Ranked 1st overall. Secured spot for Cancun Squad.
-      </p>
-    </div>
-
-    <div style="overflow: hidden; border-top: 1px solid #edf2f7;">
+    <div style="overflow: hidden;">
       <table class="log-table">
         <thead>
           <tr>
-            <th class="col-info col-left">Tournament Details</th>
+            <th class="col-info col-left">Round</th>
             <th class="col-score">Score</th>
             <th class="col-par">Par</th>
             <th class="col-status">Status</th>
-            <th class="col-finish">Finish</th>
+            <th class="col-finish">Rank</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #7f8c8d;">Jan 22, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 1: The Canyons</div>
+              <div style="font-size: 11px; color: #7f8c8d;">Jan 22 | Par 72</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">68</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-4</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">T1</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">T1</span></div>
               </div>
             </td>
-            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">68</span></td>
-            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-4</span></td>
-            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
-            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">T1</td>
+            <td class="hide-mobile"><span class="under-par">68</span></td>
+            <td class="hide-mobile"><span class="under-par">-4</span></td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800;">T1</td>
           </tr>
           <tr>
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #7f8c8d;">Jan 23, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 2: The Oaks Course (Par 72)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 2: The Oaks</div>
+              <div style="font-size: 11px; color: #7f8c8d;">Jan 23 | Par 72</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value under-par">69</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value under-par">-3</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">2</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value">2</span></div>
               </div>
             </td>
-            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">69</span></td>
-            <td class="hide-mobile"><span class="under-par" style="font-size: 16px;">-3</span></td>
-            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
-            <td class="hide-mobile" style="font-weight: 800; font-size: 16px;">2</td>
+            <td class="hide-mobile"><span class="under-par">69</span></td>
+            <td class="hide-mobile"><span class="under-par">-3</span></td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800;">2</td>
           </tr>
           <tr style="background: rgba(12, 35, 64, 0.02);">
             <td class="col-left">
-              <div style="font-weight: 600; font-size: 13px; color: #0c2340;">Jan 28, 2026</div>
-              <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 3: The Oaks Course (Par 72)</div>
-              <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio</div>
+              <div style="font-weight: 800; color: #0c2340; font-size: 15px;">Round 3: The Oaks</div>
+              <div style="font-size: 11px; color: #7f8c8d;">Jan 28 | Par 72</div>
               <div class="mobile-status-bar">
                 <div class="ms-item"><span class="ms-label">SCORE</span><span class="ms-value over-par">76</span></div>
                 <div class="ms-item"><span class="ms-label">PAR</span><span class="ms-value over-par">+4</span></div>
-                <div class="ms-item"><span class="ms-label">STATUS</span><span class="ms-value">Final</span></div>
-                <div class="ms-item"><span class="ms-label">FINISH</span><span class="ms-value">1</span></div>
+                <div class="ms-item"><span class="ms-label">RANK</span><span class="ms-value" style="color:#e74c3c;">1</span></div>
               </div>
             </td>
-            <td class="hide-mobile"><span class="over-par" style="font-size: 16px;">76</span></td>
-            <td class="hide-mobile"><span class="over-par" style="font-size: 16px;">+4</span></td>
-            <td class="hide-mobile" style="font-weight: 700; font-size: 13px;">Final</td>
-            <td class="hide-mobile" style="font-weight: 800; font-size: 16px; color: #e74c3c;">1</td>
+            <td class="hide-mobile"><span class="over-par">76</span></td>
+            <td class="hide-mobile"><span class="over-par">+4</span></td>
+            <td class="hide-mobile" style="font-size: 12px; color: #95a5a6;">Final</td>
+            <td class="hide-mobile" style="font-weight: 800; color: #e74c3c;">1</td>
           </tr>
         </tbody>
       </table>
     </div>
+
+    <div style="background: #0c2340; padding: 15px 25px; display: flex; justify-content: flex-end; align-items: center; gap: 30px;">
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
+        <span style="color: #ffffff; font-size: 18px; font-weight: 900;">213</span>
+      </div>
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Par</span>
+        <span style="color: #e74c3c; font-size: 18px; font-weight: 900;">-3</span>
+      </div>
+      <div style="text-align: right;">
+        <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
+        <span style="color: #ffffff; font-size: 18px; font-weight: 900;">1</span>
+      </div>
+    </div>
   </div>
 </div>
+
+  
   
 
 <div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 20px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
